--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,4 +27,4 @@ jobs:
         tags: kishanramola3/ci-cd-example:latest  # Replace with your Docker Hub username and repository
 
     - name: Verify Pushed Image
-      run: docker pull 100xdevs/web-app:latest  # Replace with your Docker Hub username and repository
+      run: docker pull kishanramola3/ci-cd-example:latest  # Replace with your Docker Hub username and repository
