--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: .docker//Dockerfile.user
+        file: ./docker/Dockerfile.user
         push: true
         tags: kishanramola3/ci-cd-example:latest  # Replace with your Docker Hub username and repository
 
